--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "top-api",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "author": "Eli Slavutski",
   "private": true,
@@ -22,8 +22,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
+    "@typegoose/typegoose": "^9.8.1",
+    "mongoose": "^6.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
