--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.72.1"
   },
   "jest": {
     "moduleFileExtensions": [
