--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@typegoose/typegoose": "^9.8.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "mongoose": "^6.3.3",
     "nestjs-typegoose": "^7.1.38",
     "reflect-metadata": "^0.1.13",
