--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.3",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@typegoose/typegoose": "^9.8.1",
     "bcryptjs": "^2.4.3",
@@ -33,6 +34,8 @@
     "class-validator": "^0.13.2",
     "mongoose": "^6.3.3",
     "nestjs-typegoose": "^7.1.38",
+    "passport": "^0.5.3",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -45,6 +48,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
